<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".DashboardPackage.NewAdvert">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_type"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_lost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lost"
                android:textSize="18sp"
                android:layout_margin="20dp"
                android:textColor="@color/black"/>

            <RadioButton
                android:id="@+id/radio_found"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/found"
                android:textSize="18sp"
                android:layout_margin="20dp"
                android:textColor="@color/black"/>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:layout_marginTop="5dp"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            />

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:layout_marginTop="5dp"
            android:inputType="phone"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginTop="5dp"

            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="3"
            android:background="@drawable/edit_text"
            android:layout_marginTop="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_marginTop="5dp"

            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:paddingEnd="0dp"/>

        <EditText
            android:id="@+id/edit_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/dd_mm_yyyy"
            android:background="@drawable/edit_text"
            android:layout_marginTop="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            />

        <EditText
            android:id="@+id/edit_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@drawable/edit_text"
            android:layout_marginTop="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            />

    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveAllBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_margin="30dp"
            android:background="@drawable/buttonshape"
            android:padding="25dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"/>
        
    </LinearLayout>



</LinearLayout>
</ScrollView>